<resources>

    <string name="app_name">coreSHIP Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">great.driver@coreshipdriver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- About -->
    <string name="about_text">This is the About view</string>

    <!-- Badge -->
    <string name="badge_text">This is the Badge view</string>

    <!-- Dashboard -->
    <string name="dashboard_text">This is the Dashboard view</string>

    <!-- Edit Sprints -->
    <string name="edit_sprints_text">This is the Edit Sprints view</string>

    <!-- Error messages -->
    <string name="error_message_internet">There was a problem with your network request. Please try again later.</string>
    <string name="error_message_internet_timeout">Your network request has timed out.</string>

    <!-- Express Pickup -->
    <string name="express_pickup_text">This is the Express Pickup view</string>
    <string name="cd_close_button">Back</string>

    <!-- Incident Report -->
    <string name="incident_report_text">This is the Incident Report view</string>

    <!-- Login -->
    <string name="login_button">Login</string>

    <!-- Menu -->
    <string name="menu_about">About</string>
    <string name="menu_badge">Badge</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_edit_sprints">Edit Sprints</string>
    <string name="menu_express_pickup">Express Pickup</string>
    <string name="menu_incident_report">Incident Report</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sprint_list">Sprint List</string>

    <!-- Profile -->
    <string name="profile_text">This is the Profile view</string>

    <!-- Settings -->
    <string name="settings_text">This is the Settings view</string>

    <!-- Sprint List -->
    <string name="sprint_list_text">This is the Sprint List view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>